--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -2,18 +2,30 @@
 
 
 .form-container {
-    min-width: 30%;
-    max-width: 50%;
-    display: flex;
-    flex-direction: column;
+    min-width: 30vw;
+    max-width: 50vw;
+    min-height: 60vh;
+    display: block ;
+    flex-direction: row;
     justify-content: center;
-    // align-items: center;
+    align-items: center;
     height: 100%;
     background-color: white;
     border-radius: 5px; 
+    padding: 2rem 1.5rem;
     margin: 5vw 0;
-    padding: 2rem 3%;
     filter: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
+    transition: all 0.2s;
+}
+
+.form-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.active-form {
+
 }
 
 .empty-container {
@@ -82,3 +94,13 @@
   }
 }
 
+.modal-active {
+  display: block !important;
+  top: 0px !important;
+  
+}
+
+.title {
+  font-size: 1.4rem;
+  margin-bottom: 1.5rem;
+}
