--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -2,9 +2,8 @@
 
 
 .form-container {
-    min-width: 30vw;
-    max-width: 50vw;
-    min-height: 60vh;
+    min-width: 25%;
+    max-width: 50%;
     display: block ;
     flex-direction: row;
     justify-content: center;
@@ -12,10 +11,10 @@
     height: 100%;
     background-color: white;
     border-radius: 5px; 
-    padding: 2rem 1.5rem;
+    padding: 2rem 2.5rem;
     margin: 5vw 0;
     filter: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
-    transition: all 0.2s;
+    // transition: all 0.2s;
 }
 
 .form-item {
@@ -24,9 +23,6 @@
   justify-content: center;
 }
 
-.active-form {
-
-}
 
 .empty-container {
     min-height: 100vh;
@@ -101,6 +97,13 @@
 }
 
 .title {
-  font-size: 1.4rem;
-  margin-bottom: 1.5rem;
+    font-size: 1.4rem;
+    margin-bottom: 1.5rem;
+}
+
+.error-message {
+    font-size: 0.8rem;
+    color: red;
+    visibility: hidden;
+
 }
